<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context="codekiller.me.modelapp.Calculator.BusinessFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cal_way_title"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_way"
            android:gravity="center" />
        <RadioGroup
            android:layout_toEndOf="@+id/cal_way_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:id="@+id/cal_way_btn1"
                android:checked="true"
                android:text="@string/by_loan_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/cal_way_btn2"
                android:text="@string/by_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/area_part"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/house_area_title"
                android:text="@string/house_area"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/area_input"
                android:layout_toEndOf="@+id/house_area_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/square_meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/unit_price_title"
                android:text="@string/unit_price"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/unit_price_input"
                android:layout_toEndOf="@+id/unit_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/unit_price_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/total_price_title"
                android:text="@string/total_price"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/total_price_input"
                android:layout_toEndOf="@+id/total_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/total_price_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/house_num_title"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_num"
                android:gravity="center" />
            <RadioGroup
                android:layout_toEndOf="@+id/house_num_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/one_house"
                    android:text="@string/one_house"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/two_house"
                    android:text="@string/two_house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/down_payment_title"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down_payment"
                android:gravity="center" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/down_payment_spinner"
                android:layout_toEndOf="@+id/down_payment_title"
                android:layout_width="220dp"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/load_money"
            android:text="@string/loan_money"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/loan_money_title"
            android:layout_toEndOf="@+id/load_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/total_price_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/loan_limit_title"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_limit"
            android:gravity="center" />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/loan_limit_spinner"
            android:layout_toEndOf="@+id/loan_limit_title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/year_rate_title"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_rate"
            android:gravity="center" />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/year_rate_spinner"
            android:layout_toEndOf="@+id/year_rate_title"
            android:layout_centerVertical="true"
            android:layout_width="220dp"
            android:layout_height="wrap_content"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/year_rate_input"
            android:layout_toEndOf="@+id/year_rate_spinner"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/hundred_char"
            android:layout_toEndOf="@+id/year_rate_input"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/repay_way_title"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repay_way"
            android:gravity="center" />
        <RadioGroup
            android:layout_toEndOf="@+id/repay_way_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:id="@+id/repay_way_btn1"
                android:text="@string/equal_interest"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/repay_way_btn2"
                android:text="@string/equal_corpus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/calculate_btn"
            android:text="@string/calculate"
            android:theme="@style/CalculateButton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/reset_btn"
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
